--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -463,7 +463,7 @@ body {
     border-radius: 0.8rem;
   }
 
-  @media (max-width: 1600px) {
+  @media only screen and (max-width: 1600px) {
     header {
       padding: 14px 4%;
     }
@@ -475,7 +475,7 @@ body {
     }
   }
 
-  @media (max-width: 1200px) {
+  @media only screen and (max-width: 1200px) {
     .home {
       flex-direction: column;
       min-height: 90vh;
@@ -490,7 +490,7 @@ body {
     }
   }
 
-  @media (max-width: 1060px) {
+  @media only screen and (max-width: 1060px) {
     .about {
       flex-direction: column;
       gap: 4rem;
@@ -509,7 +509,7 @@ body {
     }
   }
 
-  @media (max-width: 1067px) {
+  @media only screen and (max-width: 1067px) {
     .hambuger-menu.active .bar:nth-child(2) {
       opacity: 0;
     }
@@ -559,7 +559,7 @@ body {
     }
   }
 
-  @media (max-width: 600px) {
+  @media only screen and (max-width: 600px) {
     .home {
       min-height: 80vh;
     }
@@ -591,7 +591,7 @@ body {
     }
   }
 
-  @media (max-width: 480px) {
+  @media only screen and (max-width: 480px) {
     .hero-text h1 {
       font-size: 3.5rem;
     }
